Fix bug casuing mcdbutton to be full width on mobile

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     color:#000!important;
     background-color:#ccc!important
 }
-.optionsbutton {
+.fs24 {
     font-size: 24px;
 }
 #options {
